--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@
 <body class="bg-gray-50 min-h-screen">
   <!-- Notification -->
 
+  <div id="notification" class="notification">
+  <div class="flex items-center space-x-2">
+    <span id="notificationIcon"></span>
+    <div>
+      <div id="notificationTitle" class="font-bold"></div>
+      <div id="notificationMessage"></div>
+    </div>
+  </div>
+</div>
   <div class="max-w-md mx-auto bg-white min-h-screen shadow-sm">
     <!-- Header -->
     <header class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white p-6 sticky top-0 z-10">
